--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-<div class="panel panel-primary">
+<div class="panel panel-primary" ng-controller="loginCtrl">
   <div class="panel-body">
     <div class="row">
       <div class="col-md-12">
@@ -7,22 +7,28 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <form class="form-horizontal" role="form">
+        <form name="loginForm" class="form-horizontal" role="form" ng-submit="submitForm()">
           <div class="form-group">
             <label class="col-md-2 control-label">用户名:</label>
             <div class="col-md-10">
-              <input type="email" class="form-control" placeholder="推荐使用126邮箱">
+              <input ng-model="userInfo.username" name="username" type="email" class="form-control" placeholder="推荐使用126邮箱" required>
+              <i class="fa fa-check check-result" ng-show="loginForm.username.$valid"></i>
+              <p class="error" ng-show="loginForm.username.$dirty && loginForm.username.$error.required">请输入用户名</p>
+              <p class="error" ng-show="loginForm.username.$dirty && !loginForm.username.$error.required && loginForm.username.$invalid">用户名格式错误</p>
             </div>
           </div>
           <div class="form-group">
             <label class="col-md-2 control-label">密码：</label>
             <div class="col-md-10">
-              <input type="password" class="form-control" placeholder="只能是数字、字母、下划线">
+              <input ng-model="userInfo.password" name="password" type="password" class="form-control" placeholder="只能是数字、字母、下划线" required ng-minlength="6">
+              <i class="fa fa-check check-result" ng-show="loginForm.password.$valid"></i>
+              <p class="error" ng-show="loginForm.password.$dirty && loginForm.password.$error.required">请输入密码</p>
+              <p class="error" ng-show="loginForm.password.$dirty && !loginForm.password.$error.required && loginForm.password.$invalid">密码格式错误</p>
             </div>
           </div>
           <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-              <a ui-sref="booklist({bookType:0})" class="btn btn-success btn-lg">登录</a>
+              <button type="submit" class="btn btn-success btn-lg" ng-disabled="loginForm.$invalid">登录</button>
               <button class="btn btn-default btn-lg">注册</button>
             </div>
           </div>
